--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
 *.class
-**/bin/*
-**/lib/*
+
+# eclipse specific ignores
+*.pydevproject
+.project
+.metadata
+bin/**
+tmp/**
+tmp/**/*
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.classpath
+.settings/
+.loadpath
