Kind of Drawing Canvas
I've worked until my fingers are nubs. :-1:  Anyway. It doesn't do much
yet but all the background stuff is there. I just need to figure out the
color changer. :)  Gonna keep working hard. Might not et everything done
by Wednesday morning but I'm going to really try hard. . Bed time now.

--- a/Telephone-Pictionary/AndroidManifest.xml
+++ b/Telephone-Pictionary/AndroidManifest.xml
@@ -30,6 +30,10 @@
             android:name=".Connect"
             android:label="@string/title_activity_connect" >
         </activity>
+        <activity
+            android:name=".CanvasDrawer"
+            android:label="@string/title_activity_canvas_drawer" >
+        </activity>
     </application>
-
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 </manifest>
