Canvas Write is Working
:pray:  :pray: :pray: CANVAS WRITE IS WORKING :confetti_ball:
:confetti_ball: (kind of). We'll figure out how to store later. Giving
up on drawing canvas for tonight but whatevs. I have an idea of how to
do it but it would be tedious so I tthought I'd talk to you guys about
it tomorrow

--- a/Telephone-Pictionary/AndroidManifest.xml
+++ b/Telephone-Pictionary/AndroidManifest.xml
@@ -34,7 +34,10 @@
             android:name=".CanvasDrawer"
             android:label="@string/title_activity_canvas_drawer" >
         </activity>
-       
+        <activity
+            android:name=".CanvasWriter"
+            android:label="@string/title_activity_canvas_writer" >
+        </activity>
     </application>
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
