Saving state of drawing/writing during card viewer

--- a/Telephone-Pictionary/AndroidManifest.xml
+++ b/Telephone-Pictionary/AndroidManifest.xml
@@ -52,6 +52,10 @@
             android:name=".CardFragment"
             android:label="@string/title_activity_card_fragment" >
         </activity>
+        <activity
+            android:name=".HostGame"
+            android:label="@string/title_activity_host_game" >
+        </activity>
     </application>
 
 </manifest>
