adding host & join game classes

--- a/Telephone-Pictionary/AndroidManifest.xml
+++ b/Telephone-Pictionary/AndroidManifest.xml
@@ -56,6 +56,10 @@
             android:name=".HostGame"
             android:label="@string/title_activity_host_game" >
         </activity>
+        <activity
+            android:name=".JoinGame"
+            android:label="@string/title_activity_join_game" >
+        </activity>
     </application>
 
 </manifest>
